<resources>
    <string name="app_name">Employee Attendance System</string>
    <string name="employee">Employee</string>
    <string name="admin">Admin</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_id">Enter ID</string>
    <string name="password">Password</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time_in">Enter Time In</string>
    <string name="enter_time_out">Enter Time Out</string>
    <string name="date">Date</string>
    <string name="enter_button">Enter</string>
    <string name="enter_employee">Enter Employee\'s Details</string>
    <string name="employee_id">Employee ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_employee">Add Employee</string>
    <string name="view_employees">View Employees</string>
    <string name="all_employees">All Employees</string>
    <string name="employee_details">Enter Employee\'s Details</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="no_records">No Records Available</string>
    <string name="edit_delete">Edit/Delete</string>
    <string name="edit">Edit</string>
    <string name="delete">Deletet</string>
</resources>