<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/textview_employee_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_details"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textColor="#00928B"
            android:layout_marginBottom="30dp"
            >
        </TextView>

        <TextView
            android:id="@+id/textview_enter_employee_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_id"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            >
        </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_employee_ID"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_id"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_employee_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="20sp"
                android:hint="@string/employee_id">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textview_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_marginTop="20sp"
            >
        </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginTop="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginTop="20sp"
                android:hint="@string/first_name">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textview_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_marginTop="20sp"
            >
        </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_marginTop="0dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:layout_marginTop="20sp"
                android:hint="@string/last_name">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textview_enter_password_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_marginTop="20sp"
            >
        </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_enter_password_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_enter_password_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textVisiblePassword"
                android:layout_marginTop="20sp"
                android:hint="@string/password">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_add_employee"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/add_employee"
            android:padding="12dp"
            android:backgroundTint="#00928B"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            ></Button>

        <Button
            android:id="@+id/button_view_employee"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/view_employees"
            android:padding="12dp"
            android:backgroundTint="#00928B"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            ></Button>


    </LinearLayout>




</ScrollView>