<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/textview_time_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_out"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textColor="#00928B"
            android:layout_marginBottom="30dp"
            >
        </TextView>

        <TextView
            android:id="@+id/textview_enter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_date"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            >
        </TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout_enter_month"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/month"
                android:layout_marginTop="10dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_enter_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="20sp"
                    android:hint="@string/month">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout_enter_day"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_enter_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="20sp"
                    android:hint="@string/day">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout_enter_year"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_enter_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="20sp"
                    android:hint="@string/year">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




        <TextView
            android:id="@+id/textview_enter_time_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_time_out"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:layout_marginTop="20sp"
            >
        </TextView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textlayout_enter_time_out"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/time_out"
                android:layout_marginTop="10dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinput_enter_time_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="20sp"
                    android:hint="@string/time_out">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                tools:listitem="@layout/support_simple_spinner_dropdown_item">

                >

            </Spinner>


        </LinearLayout>


        <Button
            android:id="@+id/button_enter_time_out"
            android:layout_width="180dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00928B"
            android:padding="12dp"
            android:text="@string/enter_time_out"></Button>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_title_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/textview_title_time_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_in"
                    app:layout_constraintRight_toLeftOf="@id/textview_title_time_out"
                    app:layout_constraintLeft_toRightOf="@id/textview_title_date"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/textview_title_time_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_out"
                    android:gravity="right"
                    android:layout_gravity="right"
                    app:layout_constraintRight_toLeftOf="@id/textview_title_edit"
                    app:layout_constraintLeft_toRightOf="@id/textview_title_time_in"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/textview_title_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_delete"
                    android:gravity="right"
                    android:layout_gravity="right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="14sp"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ItemList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_row"
            android:layout_marginTop="10dp"
            >


        </androidx.recyclerview.widget.RecyclerView>



    </LinearLayout>
</ScrollView>