<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_dashboard_greetings"
        >

        <TextView
            android:id="@+id/textview_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="#00928B"
            >
        </TextView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="100dp">



        <Button
            android:id="@+id/button_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:padding="12dp"
            android:backgroundTint="#00928B"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_admin"
            app:layout_constraintBottom_toTopOf="@id/button_admin"
            ></Button>

        <Button
            android:id="@+id/button_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:padding="12dp"
            android:backgroundTint="#00928B"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_employee"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="6dp"

            ></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.constraintlayout.widget.ConstraintLayout>